<resources>
    <string name="app_name">Android Course Work</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register_btn">Register</string>
    <string name="firstname_hint">Firstname</string>
    <string name="lastname_hint">Lastname</string>
    <string name="invalid_email_or_password">Invalid Email or Password!!</string>
    <string name="new_compliant">New Compliants</string>
    <string name="viewed_compliants">View Compliants</string>
    <string name="tittle_profile">Profile</string>

    <string name="category">Category</string>
    <string name="nav_main_tittle">Main</string>
    <string name="nav_user_tittle">Users</string>
    <string name="nav_user_create">Create User</string>
    <string name="user_view">Profile</string>
    <string name="nav_user_credentials">Credentials</string>
    <string name="nav_user_password_reset">Password Reset</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">New Complaint</string>
    <string name="subject_hint">Subject</string>
    <string name="description_hint">Description</string>
    <string name="new_compliant_category">Select the Category</string>
    <string name="location_hint">"Location "</string>
    <string name="address_hint">Address</string>
    <string name="city_hint">City</string>
    <string name="post_code_hint">Post Code</string>
    <string name="state_hint">State</string>
    <string name="find_postcode_button">Find</string>
    <string name="upload_image_button_hint">Select the image</string>
    <string name="single_subject_hint">Subject :</string>
    <string name="single_description_hint">Description :</string>
    <string name="single_address_hint">Address :</string>
    <string name="single_city_hint">City :</string>
    <string name="single_state_hint">State :</string>
    <string name="single_phone_hint">Phone :</string>
    <string name="single_category_hint">Category :</string>
    <string name="single_user_hint">Fullname :</string>
    <string name="single_status_hint">Status :</string>
    <string name="single_postcode_hint">Post Code</string>
    <string name="update_button_hint">Update</string>
    <string name="nav_logout">Logout</string>
    <string name="new_password_hint">New Password</string>
    <string name="current_password_hint">Current Password</string>
    <string name="reset_password_button">Reset Password</string>
    <string name="category_title">Category</string>
    <string name="category_add">Add Category</string>
    <string name="new_category_create">New Category</string>
    <string name="view_categories">View Categories</string>
    <string name="category_update">Category Update</string>
    <string name="send_email">Send Email</string>
    <string name="send_email_btn">Send Email</string>
    <string name="add">Add</string>
</resources>

