<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <item android:title="@string/nav_main_tittle">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_viewed_compliant"
                    android:icon="@drawable/ic_outline_view_compliant"
                    android:title="@string/viewed_compliants"

                    />
<!--                <item-->
<!--                    android:id="@+id/nav_category"-->
<!--                    android:icon="@drawable/ic_baseline_category_24"-->
<!--                    android:title="@string/category" />-->
            </group>
        </menu>
    </item>
    <item android:title="@string/category">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_category_create"
                    android:icon="@drawable/ic_baseline_dashboard_customize_24"
                    android:title="@string/new_category_create"

                    />
                <item
                    android:id="@+id/nav_category_view"
                    android:icon="@drawable/ic_baseline_dashboard_24"
                    android:title="@string/view_categories" />
            </group>
        </menu>
    </item>
    <item android:title="@string/nav_user_tittle">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_user_view"
                    android:icon="@drawable/ic_baseline_person_24"
                    android:title="@string/user_view" />
            </group>
        </menu>
    </item>
    <item android:title="@string/nav_user_credentials">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_password_change"
                    android:icon="@drawable/ic_baseline_password_24"
                    android:title="@string/nav_user_password_reset" />
            </group>
        </menu>
    </item>
    <item android:title="@string/nav_logout">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_baseline_logout_24"
                    android:title="@string/nav_logout" />
            </group>
        </menu>
    </item>
</menu>