<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register_bk_color"
    tools:context=".NewComplaintFragment"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:paddingTop="0dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputCategory"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextCategory"
                            style="@style/modifiedEditText"
                            android:autofillHints="Category"
                            android:backgroundTint="#FFFFFF"
                            android:hint="@string/new_compliant_category"
                            android:inputType="text"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputCategoryEmail"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextCategoryEmail"
                            style="@style/modifiedEditText"
                            android:autofillHints="Category"
                            android:backgroundTint="#FFFFFF"
                            android:hint="@string/login_email_hint"
                            android:inputType="textEmailAddress"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/addCategoryButton"
                        style="@style/loginButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:background="@drawable/button_background_blue"
                        android:backgroundTint="@color/register_bk_color"
                        android:text="@string/category_add" />
                    <Button
                        android:id="@+id/updateCategoryButton"
                        style="@style/loginButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:background="@drawable/button_background_blue"
                        android:backgroundTint="@color/register_bk_color"
                        android:text="@string/category_update"
                        android:visibility="gone"/>
                    <TextView
                        android:id="@+id/errorView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="asdaxzc"
                        android:layout_gravity="center"
                        android:textColor="@color/error_red"
                        android:visibility="gone"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>

</FrameLayout>