<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register_bk_color"
    tools:context=".NewComplaintFragment"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:paddingTop="0dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputSubject"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextSubject"
                            style="@style/modifiedEditText"
                            android:autofillHints="textPersonName"
                            android:backgroundTint="#FFFFFF"
                            android:hint="@string/subject_hint"
                            android:inputType="text"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLastname"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextDescription"
                            style="@style/modifiedEditText"

                            android:autofillHints="textPersonName"
                            android:backgroundTint="#FFFFFF"
                            android:hint="@string/description_hint"
                            android:inputType="textCapSentences"
                            android:maxLines="4" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!--                        <EditText-->
                    <!--                            android:id="@+id/editTextCategory"-->
                    <!--                            style="@style/modifiedEditText"-->
                    <!--                            android:layout_width="wrap_content"-->
                    <!--                            android:autofillHints="Category"-->
                    <!--                            android:backgroundTint="#FFFFFF"-->
                    <!--                            android:hint="@string/new_compliant_category"-->
                    <!--                            android:inputType="text"-->
                    <!--                            android:maxLines="1" />-->
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <Spinner
                            android:id="@+id/categoryDropdownSendMail"
                            style="@style/modifiedEditText"
                            android:spinnerMode="dialog"
                            android:textAlignment="center"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/selectLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputGetPostcode"
                            style="@style/parent"
                            android:layout_width="180dp"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextGetPostcode"
                                style="@style/modifiedEditText"
                                android:layout_width="133dp"
                                android:autofillHints="postalAddress"
                                android:backgroundTint="#FFFFFF"
                                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                                android:hint="@string/post_code_hint"
                                android:inputType="textPersonName"
                                android:maxLines="4" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/findPostCodeButton"
                            style="@style/loginButton"
                            android:layout_width="130dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/button_background_blue"
                            android:backgroundTint="@color/register_bk_color"
                            android:text="@string/find_postcode_button" />
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputAddress"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextAddress"
                            style="@style/modifiedEditText"
                            android:autofillHints="postalAddress"
                            android:backgroundTint="#FFFFFF"
                            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                            android:hint="@string/address_hint"
                            android:inputType="textPersonName"
                            android:maxLines="4" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputCity"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextCity"
                            style="@style/modifiedEditText"
                            android:backgroundTint="#FFFFFF"
                            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                            android:hint="@string/city_hint"
                            android:inputType="textPersonName"
                            android:maxLines="4" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPostCode"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextPostCode"
                            style="@style/modifiedEditText"
                            android:autofillHints="postalAddress"
                            android:backgroundTint="#FFFFFF"
                            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                            android:hint="@string/post_code_hint"
                            android:inputType="textPersonName"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputState"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextState"
                            style="@style/modifiedEditText"
                            android:backgroundTint="#FFFFFF"
                            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                            android:hint="@string/state_hint"
                            android:inputType="textPersonName"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="296dp"
                        android:layout_height="143dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp" />

                    <Button
                        android:id="@+id/BtnSendEMail"
                        style="@style/loginButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:background="@drawable/button_background_blue"
                        android:backgroundTint="@color/register_bk_color"
                        android:text="@string/send_email_btn" />
                    <TextView
                        android:id="@+id/errorView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="asdaxzc"
                        android:layout_gravity="center"
                        android:textColor="@color/error_red"
                        android:visibility="gone"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>

</FrameLayout>